--- a/RAIL_GRIND_RUMBLE/Packages/manifest.json
+++ b/RAIL_GRIND_RUMBLE/Packages/manifest.json
@@ -3,6 +3,7 @@
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.ai.navigation": "1.0.0-exp.4",
+    "com.unity.animation.rigging": "1.1.1",
     "com.unity.cinemachine": "2.8.9",
     "com.unity.collab-proxy": "1.15.18",
     "com.unity.feature.development": "1.0.1",
