--- a/RAIL_GRIND_RUMBLE/Packages/manifest.json
+++ b/RAIL_GRIND_RUMBLE/Packages/manifest.json
@@ -15,6 +15,7 @@
     "com.unity.probuilder": "5.0.6",
     "com.unity.progrids": "3.0.3-preview.4",
     "com.unity.render-pipelines.universal": "12.1.7",
+    "com.unity.terrain-tools": "4.0.3",
     "com.unity.test-framework": "1.1.31",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.6.4",
