--- a/RAIL_GRIND_RUMBLE/UserSettings/Search.settings
+++ b/RAIL_GRIND_RUMBLE/UserSettings/Search.settings
@@ -7,7 +7,7 @@ onBoardingDoNotAskAgain = true
 showPackageIndexes = false
 showStatusBar = false
 scopes = {
-	"last_search.DA949528" = "add pack"
+	"last_search.DA949528" = "music"
 	"OpenInspectorPreview.DA949528" = "0"
 	"currentGroup.DA949528" = "all"
 	"last_search.DD5CDD96" = ""
@@ -62,6 +62,7 @@ providers = {
 objectSelectors = {
 }
 recentSearches = [
+	"m"
 	"a"
 	"package b"
 ]
